tests/check-contents/check-contents.exp
syntax_error.js
Error ---------------------------------------------------------------------------------------------- syntax_error.js:4:1

Unexpected end of input

   4|
      



Found 1 error
syntax_error.js (no filename)
Error ------------------------------------------------------------------------------------------------------------ -:4:1

Unexpected end of input

   4|
      



Found 1 error


not_flow.js

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number.

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


not_flow.js with --all

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number.

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


not_flow.js with --respect-pragma

File is not @flow!


not_flow.js with --respect-pragma and --all

Error -------------------------------------------------------------------------------------------------- not_flow.js:1:5

Cannot perform arithmetic operation because string [1] is not a number.

   1| 1 * 'foo';
          ^^^^^ [1]



Found 1 error


unsaved_foo.js depends on bar.js which is still checked against foo.js

No errors!


bad_exports.js

No errors!
